# PAVIC

./: .gitignore  CMakeLists.txt  README.md  cmake_config.bat
Modulo 03/: PAVIC_GUI_2024.vcxproj
Modulo 03/docs/: APRESENTACAO_PAVIC_LAB_2025.pptx
Modulo 03/forms/: NativeProcessor.h
Modulo 03/include/: CUDAFilter.h  GUI.h  PerformanceMetrics.h
Modulo 03/src/: MultithreadFilter.cpp
Treinamento/Modulo 03/: PAVIC_GUI_2024.sln  build_and_run.bat  upload_github.bat
Treinamento/Modulo 03/forms/: MainForm.h
Treinamento/Modulo 03/include/: FilterUtils.h  ImageProcessor.h  MultithreadFilter.h  ParallelFilter.h  SequentialFilter.h
Treinamento/Modulo 03/src/: CUDAFilter.cpp  CUDAFilter.cu  PerformanceMetrics.cpp  WebcamCapture.cpp  main.cpp
forms/: Main.cpp
include/: WebcamCapture.h
src/: Benchmark.cpp  FilterUtils.cpp  GUI.cpp  ImageProcessor.cpp  ParallelFilter.cpp  SequentialFilter.cpp
